added utf-8 charset, changed three full stops to ellipsis

--- a/items/2.3.2.html
+++ b/items/2.3.2.html
@@ -1,4 +1,4 @@
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Ornaments <span class='bracket'>[</span>...<span class='bracket'>]</span> drop lines <span class='bracket'>[</span>...<span class='bracket'>]</span> outdented paragraphs <span class='bracket'>[</span>...<span class='bracket'>]</span> and others, have their uses but the plainest, most unmistakable yet unobtrusive way of marking paragraphs is the simple indent.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Ornaments <span class='bracket'>[</span>…<span class='bracket'>]</span> drop lines <span class='bracket'>[</span>…<span class='bracket'>]</span> outdented paragraphs <span class='bracket'>[</span>…<span class='bracket'>]</span> and others, have their uses but the plainest, most unmistakable yet unobtrusive way of marking paragraphs is the simple indent.&#8221;</p>
  </blockquote>
 	<p>Indenting the first line of a paragraph, or any block element is achieved in <abbr title="Cascading Style Sheets">CSS</abbr> using the text-indent&nbsp;property:</p>
 
