--- a/items/3.1.1.html
+++ b/items/3.1.1.html
@@ -1,4 +1,3 @@
-
 <blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>In the sixteenth century, a series of common sizes developed among European typographers, and the series survived with little change and few additions for 400&nbsp;years. <span class='bracket'>[</span>…<span class='bracket'>]</span> Use the old familiar scale, or use new scales of your own devising, but limit yourself, at first, to a modest set of distinct and related intervals.&#8221;</p>
  </blockquote>
 	<p>Sizing text in <abbr title="Cascading Style Sheets">CSS</abbr> is achieved using the <code>font-size</code> property. In print, font sizes are specified absolutely, for example setting text at 12&nbsp;points implies a particular physical height for the printed text. On the web, font sizes can be set absolutely or relatively, and in a number of different units. What&#8217;s more, most web browsers enable the reader to resize the text to suit their own reading environment and&nbsp;requirements.</p>
@@ -24,5 +23,5 @@ h3 { font-size:1.125em; /* 16x1.125=18 */ }
 h4 { font-size:0.875em; /* 16x0.875=14 */ }
 p  { font-size:0.75em;  /* 16x0.75=12 */ }</code></pre>
 
-	<p>More details and analysis of font sizing can be found in <a href="/web/20140209211729/http://www.alistapart.com/articles/howtosizetextincss/">How to Size Text in <abbr title="Cascading Style Sheets">CSS</abbr></a>.</p>
+	<p>More details and analysis of font sizing can be found in <a href="http://www.alistapart.com/articles/howtosizetextincss/">How to Size Text in <abbr title="Cascading Style Sheets">CSS</abbr></a>.</p>
  
