--- a/items/2.1.2.html
+++ b/items/2.1.2.html
@@ -1,6 +1,6 @@
 <blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Anything from 45&nbsp;to 75&nbsp;characters is widely regarded as a satisfactory length of line for a single-column page set in a serifed text face in a text size. The 66-character line <span class='bracket'>(</span>counting both letters and spaces<span class='bracket'>)</span> is widely regarded as ideal. For multiple column work, a better average is 40&nbsp;to 50&nbsp;characters.&#8221;</p>
  </blockquote>
-	<p>The <em>measure</em> is the number of characters in single line of a column of text. <abbr title="HyperText Mark-up Language">HTML</abbr> doesn&#8217;t have a concept of columns per se, instead text is held within <em>boxes</em>. In <abbr title="Cascading Style Sheets">CSS</abbr> the width of a box is set using the <code>width</code> property with any unit of length, for&nbsp;example:</p>
+	<p>The <em>measure</em> is the number of characters in a single line of a column of text. <abbr title="HyperText Mark-up Language">HTML</abbr> doesn&#8217;t have a concept of columns per se, instead text is held within <em>boxes</em>. In <abbr title="Cascading Style Sheets">CSS</abbr> the width of a box is set using the <code>width</code> property with any unit of length, for&nbsp;example:</p>
 
 <pre><code>DIV#col1 {
   width:400px }
