--- a/items/2.1.7.html
+++ b/items/2.1.7.html
@@ -9,7 +9,8 @@
   font-family: "univers bold condensed",
     impact, haettenschweiler, sans-serif;
   font-size: 200%;
-  letter-spacing:0.1em; }</code></pre>
+  letter-spacing: 0.1em;
+}</code></pre>
 
 	<p>This would render as&nbsp;follows:</p>
 
