--- a/items/2.1.8.html
+++ b/items/2.1.8.html
@@ -9,7 +9,7 @@
 <pre><code>&lt;span class="kern"&gt;W&lt;/span&gt;ashington
 and &lt;span class="kern"&gt;T&lt;/span&gt;oronto
 
-.kern {letter-spacing: -0.1em }</code></pre>
+.kern { letter-spacing: -0.1em; }</code></pre>
 
 	<p>Which should render&nbsp;as:</p>
 
