--- a/items/2.1.9.html
+++ b/items/2.1.9.html
@@ -5,7 +5,7 @@
 
 <pre><code>&lt;h2 class="squish"&gt;letterfit&lt;/h2&gt;
 
-h2.squish {letter-spacing: -0.1em }</code></pre>
+h2.squish { letter-spacing: -0.1em; }</code></pre>
 
 	<p>Resulting&nbsp;in:</p>
 
