--- a/items/2.2.2.html
+++ b/items/2.2.2.html
@@ -5,7 +5,8 @@
 <pre><code>p {
   line-height: 1.5;
   margin-top: 1.5em;
-  margin-bottom: 1.5em }</code></pre>
+  margin-bottom: 1.5em;
+}</code></pre>
 
 	<p>It should be noted that the default treatment by web browsers of paragraphs <span class='bracket'>(</span>and other block level elements such as blockquotes and lists<span class='bracket'>)</span>  is to insert a top- and bottom-margin of 1&nbsp;em. The implication is that margins must always be specified by the&nbsp;designer.</p>
 
@@ -20,7 +21,8 @@
 <pre><code>h2 {
   line-height: 1.286;
   margin-top: 1.286em;
-  margin-bottom: 1.286em }</code></pre>
+  margin-bottom: 1.286em;
+}</code></pre>
 
 	<p>One can also set asymmetrical margins for headings, provided the margins combine to be multiples of the basic line height. For example, a top margin of 1&frac12; lines could be combined with a bottom margin of half a line as&nbsp;follows:</p>
 
@@ -29,7 +31,8 @@
 <pre><code>h2 {
   line-height: 1.286;
   margin-top: 1.929em;
-  margin-bottom: 0.643em }</code></pre>
+  margin-bottom: 0.643em;
+}</code></pre>
 
 	<p>By way of a further example, the main heading of the page you are reading has a text size of 18&nbsp;px, therefore the <code>line-height</code> is set to 1&nbsp;em, as are the&nbsp;margins.</p>
 
