--- a/items/2.3.1.html
+++ b/items/2.3.1.html
@@ -2,9 +2,9 @@
  </blockquote>
 	<p>Paragraphs, and other block level elements, are indented using the <code>text-indent</code> property. To ensure a paragraph is set flush left, the text-indent should be set to&nbsp;zero:</p>
 
-<pre><code><code>p {
-  text-indent:0 }
-</code></code></pre>
+<pre><code>p {
+  text-indent: 0;
+}</code></pre>
 
 	<p>This rule is rarely necessary, however, because <abbr title="Cascading Style Sheets">CSS</abbr> specifies that the default initial value for <code>text-indent</code> should be <code>0</code>.</p>
  
