--- a/items/2.4.3.html
+++ b/items/2.4.3.html
@@ -6,7 +6,8 @@
 
 <pre><code>p {
   hyphenate: auto;
-  hyphenate-lines: 3; }</code></pre>
+  hyphenate-lines: 3;
+}</code></pre>
 
 	<p>A value of <code>none</code> means that there is no limit to the number of successive hyphenated&nbsp;lines.</p>
  
