--- a/items/3.2.1.html
+++ b/items/3.2.1.html
@@ -16,7 +16,8 @@
 	<p>For example, one could specify old-style figures using the <code>oldstyle-nums</code> value as&nbsp;follows:</p>
 
 <pre><code>p {
-  font-variant-numeric: oldstyle-nums }</code></pre>
+  font-variant-numeric: oldstyle-nums;
+}</code></pre>
 
 	<p>To specify titling figures, one would use a value of <code>lining-nums</code>.</p>
  
