--- a/items/2.1.1.html
+++ b/items/2.1.1.html
@@ -3,9 +3,11 @@
 	<p>In <abbr title="Cascading Style Sheets">CSS</abbr>, word space is set with the <code>word-spacing</code> property which has a default value of <code>normal</code>. The default word space is equivalent to approximately 0.25&nbsp;em, although the exact value will depend on information encoded within the digital font file. To change the word spacing, you should specify a length in ems. This length is added to the existing word space; that is to say <code>word-spacing</code> does not set the actual space between words, it sets an increment to the existing spacing. For&nbsp;example:</p>
 
 <pre><code>p {
-  word-spacing:0.25em }
+  word-spacing: 0.25em;
+}
 h1 {
-  word-spacing:-0.125em }</code></pre>
+  word-spacing: -0.125em;
+}</code></pre>
 
 	<p>In the preceding example, word space in paragraphs is increased by 0.25&nbsp;em <span class='bracket'>(</span>effectively doubling it<span class='bracket'>)</span> and the word space in top level headings is decreased by 0.125&nbsp;em <span class='bracket'>(</span>effectively halving&nbsp;it<span class='bracket'>)</span>.</p>
 
@@ -20,16 +22,18 @@ h1 {
 	<p>To illustrate this principle in terms of <abbr title="Cascading Style Sheets">CSS</abbr>, consider these&nbsp;styles:</p>
 
 <pre><code>#box1 {
-  font-size:12px;
-  width:1em;
-  height:1em;
-  border:1px solid black }
+  font-size: 12px;
+  width: 1em;
+  height: 1em;
+  border: 1px solid black;
+}
 
 #box2 {
-  font-size:60px;
-  width:1em;
-  height:1em;
-  border:1px solid black }</code></pre>
+  font-size: 60px;
+  width: 1em;
+  height: 1em;
+  border: 1px solid black;
+}</code></pre>
 
 	<p>These styles will render like: </p>
 
