fixing a bunch of broken links and a broken image

--- a/items/2.1.3.html
+++ b/items/2.1.3.html
@@ -22,7 +22,7 @@ P {
 
 	<h2>Future&nbsp;considerations</h2>
 
-	<p><abbr>CSS3</abbr>&nbsp;provides further refinement of justification within the <a href="/web/20140209213835/http://www.w3.org/TR/css3-text">Text Module</a>.  For European languages, the <code>text-justify</code> property provides two justification options: <code>inter-word</code> and <code>inter-character</code>.</p>
+	<p><abbr>CSS3</abbr>&nbsp;provides further refinement of justification within the <a href="http://www.w3.org/TR/css3-text">Text Module</a>.  For European languages, the <code>text-justify</code> property provides two justification options: <code>inter-word</code> and <code>inter-character</code>.</p>
 
 	<p>Setting <code>inter-word</code> selects the simplest and fastest full justification behavior, which spreads the text evenly across the line by increasing the width of the space between words only. No expansion or compression occurs within the words, i.e. no additional letter spacing is&nbsp;created.</p>
 
