--- a/items/2.1.4.html
+++ b/items/2.1.4.html
@@ -2,7 +2,7 @@
  </blockquote>
 	<p>All white space in <abbr title="HyperText Mark-up Language">HTML</abbr>, in any combination of spaces, tabs or line breaks, is automatically collapsed to a single word space. Therefore this guideline is automatically adhered to regardless of your training as a&nbsp;typist.</p>
 
-	<p>If you do need to insert more than a single word space between sentences, or any other characters, then use one of the many <a href="/web/20140209214008/http://www.alanwood.net/unicode/general_punctuation.html" title="General Punctuation - Test for Unicode support in Web browsers">space characters available in Unicode</a>. Even if the character itself isn&#8217;t included in the current font, Unicode-aware browsers will display a good approximation. Avoid the temptation to use a non-breaking space, <code>&amp;nbsp;</code>, as this has a meaning in and of&nbsp;itself.</p>
+	<p>If you do need to insert more than a single word space between sentences, or any other characters, then use one of the many <a href="http://www.alanwood.net/unicode/general_punctuation.html" title="General Punctuation - Test for Unicode support in Web browsers">space characters available in Unicode</a>. Even if the character itself isn&#8217;t included in the current font, Unicode-aware browsers will display a good approximation. Avoid the temptation to use a non-breaking space, <code>&amp;nbsp;</code>, as this has a meaning in and of&nbsp;itself.</p>
 
 	<ul class='nobullets'>
 	<li><code>&amp;#8194;</code> en space <span class="inex">&#8194;</span></li>
