--- a/items/2.2.2.html
+++ b/items/2.2.2.html
@@ -24,7 +24,7 @@
 
 	<p>One can also set asymmetrical margins for headings, provided the margins combine to be multiples of the basic line height. For example, a top margin of 1&frac12; lines could be combined with a bottom margin of half a line as&nbsp;follows:</p>
 
-	<p class='imgholder'><img src="/web/20140209214917im_/http://webtypography.net/i/2-2-2i.png" alt="Diagram of text showing how the basic leading is retained with a heading and asymmetrical margins" /></p>
+	<p class='imgholder'><img src="/i/2-2-2i.png" alt="Diagram of text showing how the basic leading is retained with a heading and asymmetrical margins" /></p>
 
 <pre><code>h2 {
   line-height: 1.286;
