--- a/items/2.3.3.html
+++ b/items/2.3.3.html
@@ -6,5 +6,5 @@
 <pre><code>blockquote {
    margin:1.5em }</code></pre>
 
-	<p>As explained in <a href="/web/20140209223524/http://webtypography.net/Rhythm_and_Proportion/Vertical_Motion/2.2.2/" title="Add and delete vertical space in measured intervals">&#167;2.2.2</a>, the margins should be sized so that the rhythm of the text is maintained. Where the blockquote text size is the same as the main text, the separating margins should be set equal to the line-height.</p>
+	<p>As explained in <a href="/2.2.2" title="Add and delete vertical space in measured intervals">&#167;2.2.2</a>, the margins should be sized so that the rhythm of the text is maintained. Where the blockquote text size is the same as the main text, the separating margins should be set equal to the line-height.</p>
  
