unencoded quotes, apostrophes, and dashes

--- a/items/2.1.10.html
+++ b/items/2.1.10.html
@@ -1,13 +1,13 @@
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Lists, such as contents pages and recipes, are opportunities to build architectural structures in which space between the elements both separates and binds. The two favourite ways of destroying such an opportunity are setting great chasms of space that the eye cannot leap without help from the hand, and setting unenlightening rows of dots that force the eye to walk the width of the page like a prisoner being escorted back to its cell.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>Lists, such as contents pages and recipes, are opportunities to build architectural structures in which space between the elements both separates and binds. The two favourite ways of destroying such an opportunity are setting great chasms of space that the eye cannot leap without help from the hand, and setting unenlightening rows of dots that force the eye to walk the width of the page like a prisoner being escorted back to its cell.”</p>
  </blockquote>
 	<p>The <dfn>dot leader</dfn> approach to which Bringhurst alludes is the default presentation for tables of contents in Microsoft Word. Fortunately this kind of layout is tricky to accomplish in <abbr title="Cascading Style Sheets">CSS</abbr> so it is rarely seen in web pages. Bringhurst goes on to present two alternative layouts for tables of contents which are replicated&nbsp;here:</p>
 
-	<h2>Example 1 &#8211; Table of contents aligned&nbsp;right</h2>
+	<h2>Example 1 – Table of contents aligned&nbsp;right</h2>
 
 	<div class="example"><table class="ex2-1-10-toc1">
 <tr><th>Introduction</th><td>7</td></tr>
 <tr><th>Chapter <strong>1</strong> The Sex of Centaurs</th><td>11</td></tr>
-<tr><th>Chapter <strong>2</strong> Poliphilo&#8217;s Dream</th><td>11</td></tr>
+<tr><th>Chapter <strong>2</strong> Poliphilo’s Dream</th><td>11</td></tr>
 </table></div>
 
 	<p>This is a table of contents so it has been marked up as a simple&nbsp;table:</p>
@@ -38,7 +38,7 @@ td {
 
 	<p>While most of the <abbr title="Cascading Style Sheets">CSS</abbr> is straight forward, a point worth highlighting is the <code>margin</code> declaration for the <code>table</code> itself. There is a right margin of 3&nbsp;em to set the table in slightly from the right gutter and a left margin of <code>auto</code> to push the table over towards the right hand side of the&nbsp;page.</p>
 
-	<h2>Example 2 &#8211; Centred table of&nbsp;contents</h2>
+	<h2>Example 2 – Centred table of&nbsp;contents</h2>
 
 	<div class="example"><table class="ex2-1-10-toc2">
 <tr><th>Prologue</th><td>page 5</td></tr>
