--- a/items/2.1.3.html
+++ b/items/2.1.3.html
@@ -1,9 +1,9 @@
 
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>In justified text, there is always a trade-off between evenness of word spacing and frequency of&nbsp;hyphenation.</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>In justified text, there is always a trade-off between evenness of word spacing and frequency of&nbsp;hyphenation.</p>
 
-	<p>Narrow measures &#8211; which prevent good justification &#8211; are commonly used when the text is set in multiple columns. Setting ragged right under these conditions will lighten the page and decrease its&nbsp;stiffness.</p>
+	<p>Narrow measures – which prevent good justification – are commonly used when the text is set in multiple columns. Setting ragged right under these conditions will lighten the page and decrease its&nbsp;stiffness.</p>
 
-	<p>Many unserifed faces look best when set ragged no matter what the length of the measure. And mono-spaced fonts, which are common on typewriters, always look better set ragged.&#8221;</p>
+	<p>Many unserifed faces look best when set ragged no matter what the length of the measure. And mono-spaced fonts, which are common on typewriters, always look better set ragged.”</p>
  </blockquote>
 	<p>Setting text justified or ragged is accomplished in <abbr title="Cascading Style Sheets">CSS</abbr> through the <code>text-align</code> property, as&nbsp;follows:</p>
 
@@ -18,7 +18,7 @@ P {
 
 	<p>Effective justification of text can only be achieved if long words are hyphenated. <abbr title="HyperText Mark-up Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> 2&nbsp;do not have any provision for automatic hyphenation and current Web browsers support, even for manual hyphenation, is&nbsp;poor.</p>
 
-	<p>So don&#8217;t justify text on the&nbsp;web.</p>
+	<p>So don’t justify text on the&nbsp;web.</p>
 
 	<h2>Future&nbsp;considerations</h2>
 
