--- a/items/2.1.7.html
+++ b/items/2.1.7.html
@@ -1,5 +1,5 @@
 
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>A man who would letterspace lower case would steal sheep, Frederic Goudy liked to say. The reason for not letterspacing lower case is that it hampers legibility. But there are some lowercase alphabets to which this principle doesn&#8217;t apply. Moderate letterspacing can make a face such as lowercase Univers bold condensed <em>more</em> legible rather than less.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>A man who would letterspace lower case would steal sheep, Frederic Goudy liked to say. The reason for not letterspacing lower case is that it hampers legibility. But there are some lowercase alphabets to which this principle doesn’t apply. Moderate letterspacing can make a face such as lowercase Univers bold condensed <em>more</em> legible rather than less.”</p>
  </blockquote>
 	<p>Letterspacing lower case on the Web is particularly risky as only some faces actually benefit from the treatment, and you can rarely guarantee which type face you will actually be&nbsp;transforming.</p>
 
