--- a/items/2.1.9.html
+++ b/items/2.1.9.html
@@ -1,5 +1,5 @@
 
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>In the world of digital type, it is very easy for a designer or compositor with no regard for letters to squish them into cattle trains and ship them to slaughter.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>In the world of digital type, it is very easy for a designer or compositor with no regard for letters to squish them into cattle trains and ship them to slaughter.”</p>
  </blockquote>
 	<p><abbr title="Cascading Style Sheets">CSS</abbr> does not offer many opportunities for altering the width or shapes of letters. In fact only the <code>letter-spacing</code> property can be applied at all for this purpose, and that simply changes the width of the letters <span class='bracket'>(</span>but not their shape<span class='bracket'>)</span>. The <code>letter-spacing</code> property can however be particularly destructive. Consider this maltreatment of a&nbsp;heading:</p>
 
