--- a/items/2.2.1.html
+++ b/items/2.2.1.html
@@ -1,7 +1,7 @@
 
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Vertical space is metered in a different way <span class='bracket'>[</span>to horizontal space<span class='bracket'>]</span>. You must choose not only the overall measure &#8211; the depth of the column or page &#8211; but also a basic rhythmical unit. This unit is the leading, which is the distance from one baseline to the next.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>Vertical space is metered in a different way <span class='bracket'>[</span>to horizontal space<span class='bracket'>]</span>. You must choose not only the overall measure – the depth of the column or page – but also a basic rhythmical unit. This unit is the leading, which is the distance from one baseline to the next.”</p>
  </blockquote>
-	<p>Leading <span class='bracket'>(</span>pronounced &#8220;ledding&#8221;<span class='bracket'>)</span> is so called because, in mechanical presses, strips of lead are placed between lines of type to space the lines apart. Leading is achieved in <abbr title="Cascading Style Sheets">CSS</abbr> through the <code>line-height</code> property. For example 12&nbsp;point text can be given 3&nbsp;points of lead in the following&nbsp;manner:</p>
+	<p>Leading <span class='bracket'>(</span>pronounced “ledding”<span class='bracket'>)</span> is so called because, in mechanical presses, strips of lead are placed between lines of type to space the lines apart. Leading is achieved in <abbr title="Cascading Style Sheets">CSS</abbr> through the <code>line-height</code> property. For example 12&nbsp;point text can be given 3&nbsp;points of lead in the following&nbsp;manner:</p>
 
 <pre><code>p {
   font-size: 12pt;
