--- a/items/2.3.2.html
+++ b/items/2.3.2.html
@@ -1,4 +1,4 @@
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Ornaments <span class='bracket'>[</span>…<span class='bracket'>]</span> drop lines <span class='bracket'>[</span>…<span class='bracket'>]</span> outdented paragraphs <span class='bracket'>[</span>…<span class='bracket'>]</span> and others, have their uses but the plainest, most unmistakable yet unobtrusive way of marking paragraphs is the simple indent.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>Ornaments <span class='bracket'>[</span>…<span class='bracket'>]</span> drop lines <span class='bracket'>[</span>…<span class='bracket'>]</span> outdented paragraphs <span class='bracket'>[</span>…<span class='bracket'>]</span> and others, have their uses but the plainest, most unmistakable yet unobtrusive way of marking paragraphs is the simple indent.”</p>
  </blockquote>
 	<p>Indenting the first line of a paragraph, or any block element is achieved in <abbr title="Cascading Style Sheets">CSS</abbr> using the text-indent&nbsp;property:</p>
 
@@ -26,7 +26,7 @@ p + p {
 
 	<h2>Block&nbsp;Paragraphs</h2>
 
-	<p>As stated earlier, block paragraphs &#8211; paragraphs separated by line breaks &#8211; are the default method used by web browsers. As explained in <a href="/web/20140209211703/http://webtypography.net/Rhythm_and_Proportion/Vertical_Motion/2.2.2/">&#167;2.2.2</a> the margins separating paragraphs should be set equal to the line-height in order that the rhythm of the text is&nbsp;maintained.</p>
+	<p>As stated earlier, block paragraphs – paragraphs separated by line breaks – are the default method used by web browsers. As explained in <a href="/web/20140209211703/http://webtypography.net/Rhythm_and_Proportion/Vertical_Motion/2.2.2/">&#167;2.2.2</a> the margins separating paragraphs should be set equal to the line-height in order that the rhythm of the text is&nbsp;maintained.</p>
 
 	<h2>Outdenting</h2>
 
