--- a/items/2.3.3.html
+++ b/items/2.3.3.html
@@ -1,5 +1,5 @@
 
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>However the block quotations are set, there must be a visual distinction between  main text and quotation, and again between the quotation and subsequent text.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>However the block quotations are set, there must be a visual distinction between  main text and quotation, and again between the quotation and subsequent text.”</p>
  </blockquote>
 	<p>Adding a gap between a block quotation and the main text is best achieved by applying a top and bottom margin to the blockquote. By default, browsers usually apply a left and right margin as well. You may wish to remove this altogether by setting the margins to zero. If you wish to retain the indent, a more consistent layout can be achieved by applying left and right margins equal to the top and bottom&nbsp;margins.</p>
 
