--- a/items/2.4.5.html
+++ b/items/2.4.5.html
@@ -1,4 +1,4 @@
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>In English one hyphenates <em>cab-ri-o-let</em> but in French <em>ca-brio-let</em>. The conventions of the individual language should, ideally, be followed even for single foreign words or brief quotations.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>In English one hyphenates <em>cab-ri-o-let</em> but in French <em>ca-brio-let</em>. The conventions of the individual language should, ideally, be followed even for single foreign words or brief quotations.”</p>
  </blockquote>
 	<p>This guideline can be achieved on the Web when hyphenating manually. See <a href="/2.4.1" title="At hyphenated line-ends, leave at least two characters behind and take at least three forward">&sect;2.4.1</a> for more information on manual&nbsp;hyphenation.</p>
 
