--- a/items/2.4.6.html
+++ b/items/2.4.6.html
@@ -1,4 +1,4 @@
-<blockquote class='quote-from-book'>	<p><span class='ic'>&#8220;</span>Hard spaces are useful for preventing line-breaks within phrases such as <em>6.2&nbsp;mm</em>, <em>3&nbsp;in.</em>, <em>4&nbsp;&times;&nbsp;4</em>, or in phrases like <em>page&nbsp;3</em> and <em>chapter&nbsp;5</em>.&#8221;</p>
+<blockquote class='quote-from-book'>	<p><span class='ic'>“</span>Hard spaces are useful for preventing line-breaks within phrases such as <em>6.2&nbsp;mm</em>, <em>3&nbsp;in.</em>, <em>4&nbsp;&times;&nbsp;4</em>, or in phrases like <em>page&nbsp;3</em> and <em>chapter&nbsp;5</em>.”</p>
  </blockquote>
 	<p>In <abbr title="HyperText Mark-up Language">HTML</abbr> the hard space character is known as a non-breaking space and is inserted using the entity <code>&amp;nbsp;</code>, for&nbsp;example:</p>
 
