--- a/items/2.2.1.html
+++ b/items/2.2.1.html
@@ -25,7 +25,7 @@
 
 	<p>It should be noted that some browsers add a little leading by default: Safari and Internet Explorers for example; whereas others, such as Camino and Firefox, do not. Text on the web almost always benefits from an increase in line height, and figures upwards of 1.3&nbsp;are common <span class='bracket'>(</span>this page has a <code>line-height</code> of 1.5&nbsp;for&nbsp;example<span class='bracket'>)</span>.</p>
 
-	<p>Unlike in mechanical presses, where one line of lead is added below the text, the spacing added on the Web is divided equally above and below the text. To illustrate this the following example has a <code>line-height</code> of 3&nbsp;and shows the text sat midway between two&nbsp;borders:</p>
+	<p>Unlike in mechanical presses, where one line of lead is added below the text, the spacing added on the Web is divided equally above and below the text. To illustrate this the following example has a <code>line-height</code> of 3&nbsp;and shows the text set midway between two&nbsp;borders:</p>
 
 	<div class="example"><div class="ex2-2-1i">line-height spacing is added equally above and below the text</div></div>
 
